add table of content

--- a/prac05/prac05.ipynb
+++ b/prac05/prac05.ipynb
@@ -18,7 +18,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Определения"
+    "## Содержание\n",
+    "\n",
+    "* [Теория](#chapter1)\n",
+    "* [Задачи на пару](#chapter2)\n",
+    "* [Домашнее задание](#chapter3)\n",
+    "* [Гробы](#chapter4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Теория <a class=\"anchor\" id=\"chapter1\"></a>"
    ]
   },
   {
@@ -68,7 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задачи на пару\n"
+    "## Задачи на пару <a class=\"anchor\" id=\"chapter2\"></a>\n",
+    "\n"
    ]
   },
   {
@@ -126,7 +139,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ДЗ"
+    "## ДЗ <a class=\"anchor\" id=\"chapter3\"></a>\n",
+    "\n"
    ]
   },
   {
@@ -173,7 +187,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Гробы"
+    "## Гробы <a class=\"anchor\" id=\"chapter4\"></a>\n",
+    "\n"
    ]
   },
   {
