--- a/prac02/prac02.ipynb
+++ b/prac02/prac02.ipynb
@@ -43,7 +43,9 @@
     "\n",
     "2) $\\forall A \\in S$, $\\forall B \\in S$ -> $A \\cap B \\in S$ (есть пересечение)\n",
     "\n",
-    "3) $\\forall A \\in S$, $\\forall A_1 \\in S$, $A_1 \\subset A$ -> $\\exists A_2, \\ldots A_n \\in S$ : $A_1 \\sqcup A_2 \\sqcup \\ldots \\sqcup A_n = A$ (есть разбиение)"
+    "3) $\\forall A \\in S$, $\\forall A_1 \\in S$, $A_1 \\subset A$ -> $\\exists A_2, \\ldots A_n \\in S$ : $A_1 \\sqcup A_2 \\sqcup \\ldots \\sqcup A_n = A$ (есть разбиение)\n",
+    "\n",
+    "**Пример:** $\\{\\{1,2,3\\},\\{1\\}, \\{2\\}, \\{3\\}, \\varnothing \\}$"
    ]
   },
   {
@@ -54,7 +56,9 @@
     "\n",
     "1. $\\forall A \\in R$, $\\forall B \\in R$ -> $A \\cap B \\in R$\n",
     "\n",
-    "2) $\\forall A \\in R$, $\\forall B \\in R$ -> $A \\bigtriangleup B \\in R$ (симметричная разность, все кроме пересечения)"
+    "2) $\\forall A \\in R$, $\\forall B \\in R$ -> $A \\bigtriangleup B \\in R$ (симметричная разность, все кроме пересечения)\n",
+    "\n",
+    "**Пример:** Все натуральные числа (кольцо без единицы)"
    ]
   },
   {
@@ -81,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Определение 5.** Система множеств R называется **$\\sigma$-кольцом**, если:\n",
+    "**Определение 5.** Система множеств $R$ называется **$\\sigma$-кольцом**, если:\n",
     "\n",
     "1) $R$ — кольцо;\n",
     "\n",
@@ -115,7 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1)** Докажите, что любое кольцо это полукольцо."
+    "**1)**  \n",
+    "* Докажите, что в кольце есть разность и объединение.\n",
+    "* Докажите, что любое кольцо это полукольцо."
    ]
   },
   {
@@ -125,7 +131,7 @@
     "**2)** \n",
     "* Докажите, что множество всех подмножеств множества $\\{1,2,3\\}$ является алгеброй. Нарисуйте эту алгебру. Покажите, где здесь единица, а где ноль.\n",
     "* Докажите, что для любого множества $A$, $2^A$ - алгебра.\n",
-    "* Дополните до алгебры систему $\\{\\{1\\}, \\{2,3\\}, \\{3,4\\}\\}$"
+    "* Дополните до минимальной алгебры систему $\\{\\{1, 2,3\\}, \\{3,4, 5\\}\\}$. Покажите, что она не совпадает с булеаном."
    ]
   },
   {
@@ -141,53 +147,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4)** Докажите, что система всех интервалов на прямой не образует даже полукольца. \n",
+    "**4)** Докажите, что система всех **интервалов** на прямой не образует даже полукольца. Что насчет промежутков? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5)** Доказать,что $\\sigma$-алгебра замкнута относительно операции счетного пересечения."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задачи на дом (каждая задача по 1б) <a class=\"anchor\" id=\"chapter3\"></a> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1)** Пусть есть множество множеств $\\{\\{1,2,3, 4\\}, \\{3,4,5, 6\\}\\}$. Дополните эту систему до минимального полукольца, минимального кольца и минимальной алгебры. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2)** Доказать, что:\n",
     "\n",
-    "В самом деле, полуинтервал $(0;2) - (0;1)=[1;2)$ нельзя разбить на конечное семейство непересекающихся интервалов.\n"
+    "* (0.5) пересечение произвольной непустой системы колец является кольцом (возможно, состоящим лишь из пустого множества);\n",
+    "\n",
+    "* (0.25) пересечение произвольной непустой системы σ-колец является σ-кольцом;\n",
+    "\n",
+    "* (0.25) пересечение непустой (конечной) системы алгебр с одной и той же единицей является алгеброй.\n",
+    "\n",
+    "В каждой задаче считать, что в системе какое-то конечное число колец/алгебр."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5)** Доказать,что σ-алгебра замкнута относительно операции счетного пересечения."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**6)** Доказать, что следующие множества являются полукольцами с единицей, и указать соответствующие единицы:\n",
-    "1) $\\{[α; β) | a \\leq α \\leq β \\leq b\\}$ (включая пустой промежуток);\n",
+    "**3)** Доказать, что следующие множества являются полукольцами с единицей, и указать соответствующие единицы:\n",
+    "1) $\\{[α; β) | a \\leq α < β \\leq b\\}$ (включая пустой промежуток);\n",
     "2) система всех промежутков, вложенных в отрезок $[a; b]$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Задачи на дом <a class=\"anchor\" id=\"chapter3\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**1)** Пусть $X = \\mathcal{N}$, $A = 2^{X}$. Является ли $A$ $\\sigma$-алгеброй?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**2)** Пусть есть множество множеств $\\{\\{1,2,3\\}, \\{3,4,5\\}, \\{1,4,5\\}\\}$. Дополните эту систему до минимального полукольца, минимального кольца и минимальной алгебры. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**3)** Докажите, что система всех промежутков на прямой (включая и бесконечные) образует только полукольцо с единицей. (Почему не кольцо?)"
    ]
   },
   {
@@ -201,13 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5)** Доказать, что:\n",
-    "\n",
-    "* (0.5) пересечение произвольной непустой системы колец является кольцом (возможно, состоящим лишь из пустого множества);\n",
-    "\n",
-    "* (0.25) пересечение произвольной непустой системы σ-колец является σ-кольцом;\n",
-    "\n",
-    "* (0.25) пересечение непустой системы алгебр с одной и той же единицей является алгеброй."
+    "**5)** Пусть $A$ — бесконечное множество, $Y$ — система всех его не более чем счетных подмножеств. Доказать, что Y — σ-кольцо."
    ]
   },
   {
@@ -228,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2)(1)** Докажите, что множество всех прямоугольников на плоскости, со сторонами параллельными осям координат, **вписанных в окружность**, не образуют полукольцо."
+    "**2)(1)** Докажите, что множество всех прямоугольников на плоскости, со сторонами параллельными осям координат, **вписанных в окружность**, не образуют даже полукольцо."
    ]
   },
   {
