6th tasks for prac01-02 for freaks

--- a/prac02/prac02.ipynb
+++ b/prac02/prac02.ipynb
@@ -161,6 +161,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**6)*** Есть последовательность множеств $(A_i)_{i \\in \\mathcal{N}}$. Для последовательности множеств можно ввести понятие нижнего и верхнего предела следующим образом. \n",
+    "$$\\underline{A} = \\bigcup_{k \\in \\mathcal{N}} \\bigcap_{i \\ge k} A_i$$ \n",
+    "$$\\overline{A} = \\bigcap_{k \\in \\mathcal{N}} \\bigcup_{i \\ge k}A_i$$\n",
+    "\n",
+    "Найдите пределы для последовательностей:\n",
+    "* $\\{0,1\\}$, $\\{1,2\\}$, $\\{0,1\\}$, $\\{1,2\\}$, $\\ldots$ \n",
+    "* $A_n = [0,1+\\frac{(-1)^{n}}{n}]$\n",
+    "* $A_n = [0,\\frac{1}{n}+(-1)^{n}]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Задачи на дом (каждая задача по 1б) <a class=\"anchor\" id=\"chapter3\"></a> "
    ]
   },
