fix second prac

--- a/prac02/prac02.ipynb
+++ b/prac02/prac02.ipynb
@@ -168,7 +168,11 @@
     "Найдите пределы для последовательностей:\n",
     "* $\\{0,1\\}$, $\\{1,2\\}$, $\\{0,1\\}$, $\\{1,2\\}$, $\\ldots$ \n",
     "* $A_n = [0,1+\\frac{(-1)^{n}}{n}]$\n",
-    "* $A_n = [0,\\frac{1}{n}+(-1)^{n}]$"
+    "* $A_n = [0,\\frac{1}{n}+(-1)^{n} + 1]$\n",
+    "\n",
+    "Верхний предел последовательности множеств - множество, элементы которого принадлежат бесконечному числу множеств последовательности.\n",
+    "\n",
+    "Нижний предел последовательности множеств - множество, элементы которого принадлежат всем множествам последовательности, за исключением конечного их числа (то есть, начиная с некоторого n)."
    ]
   },
   {
