--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -103,7 +103,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.** В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\\ldots$). Имеются два типа наблюдателей, $\\textrm{Петры}$ и $\\textrm{Николаи}$. $\\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого. $\\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел. Обозначим $\\sigma$- алгебру i-ого Петра $\\mathcal{F}_i$, а $\\sigma$-алгебру i-ого Николая $\\mathcal{H}_i$.\n",
+    "**3.** В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\\ldots$). Имеются два типа наблюдателей, $\\textrm{Петры}$ и $\\textrm{Николаи}$. \n",
+    "\n",
+    "$\\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого. \n",
+    "\n",
+    "$\\textrm{Николай}_1$ видел первое подбрасывание, а потом ушел, $\\textrm{Николай}_2$ видел первое и второе подбрасывание, а потом ушел и т.д. То есть $\\textrm{Николай}_i$ видел все подбрасывания до i-ого включительно, а остальные не видел. \n",
+    "\n",
+    "Обозначим $\\sigma$- алгебру i-ого Петра $\\mathcal{F}_i$, а $\\sigma$-алгебру i-ого Николая $\\mathcal{H}_i$.\n",
     "\n",
     "Задачи:\n",
     "\n",
