--- a/prac02/prac02.ipynb
+++ b/prac02/prac02.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "2) $\\forall A \\in R$, $\\forall B \\in R$ -> $A \\bigtriangleup B \\in R$ (симметричная разность, все кроме пересечения)\n",
     "\n",
-    "**Пример:** Все натуральные числа (кольцо без единицы)"
+    "**Пример:** $\\{\\varnothing, \\{1\\}, \\{2\\}, \\{1,2\\},\\}$ (кольцо с единицей)"
    ]
   },
   {
@@ -71,7 +71,9 @@
     "\n",
     "2) $\\forall A \\in T$ верно $A \\cap X = A$\n",
     "\n",
-    "Очевидно, такое название оправдывается ролью множества X при «умножении» (т. е. пересечении) множеств."
+    "Очевидно, такое название оправдывается ролью множества X при «умножении» (т. е. пересечении) множеств.\n",
+    "\n",
+    "**Пример:** Все конечные множества состоящие из натуральных чисел (кольцо без единицы)"
    ]
   },
   {
@@ -92,6 +94,8 @@
     "2) $\\forall A_1,\\ldots ,A_n, \\ldots \\in R$ -> $\\bigcup_{i=1}^{\\infty} A_i \\in R$\n",
     "\n",
     "(Просто перешли от дискретного к счетному)\n",
+    "\n",
+    "**Пример:** Все счетные множества состоящие из вещественных чисел ($\\sigma$-кольцо без единицы)\n",
     "\n",
     "**Определение 6.** $\\sigma$-кольцо множеств с единицей называется **$\\sigma$-алгеброй** множеств."
    ]
