--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -85,25 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.** Пусть монетку подбросили один раз. Исходом этого подбрасывания назовем параметр Z, который в зависомости от произошедшего события принимает определеное значение.\n",
-    "\n",
-    " | |орел|решке|ребро|\n",
-    " |---------|----|-----|-----|\n",
-    " | p       |0.49|0.49 |0.02 |\n",
-    " | Z       |5   |7    |5    |\n",
-    "\n",
-    "Определить:\n",
-    "\n",
-    "1) минимальную $\\sigma$-алгебру на пространстве элементарных исходов $\\Omega$ ($\\sigma$-алгебру наблюдателя)\n",
-    "\n",
-    "2) $\\mathcal{F}$ - самую большую $\\sigma$-алгебру на пространстве элементарных исходов $\\Omega$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**3.** В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\\ldots$). Имеются два типа наблюдателей, $\\textrm{Петры}$ и $\\textrm{Николаи}$. \n",
+    "**2.** В ходе эксперимента монетку подбрасывают бесконечное число раз. Пусть событие $A_i$ - в i-ом подбрасывании выпал орел ($i=1,2,\\ldots$). Имеются два типа наблюдателей, $\\textrm{Петры}$ и $\\textrm{Николаи}$. \n",
     "\n",
     "$\\textrm{Петр}_1$ видел все подбрасывания, начиная с первого, $\\textrm{Петр}_2$ видел все подбрасывания, начиная со второго и тд. То есть $\\textrm{Петр}_i$ видел все подбрасывания, начиная с i-ого. \n",
     "\n",
@@ -125,24 +107,8 @@
     "\n",
     "5) В какие $\\sigma$-алгебры входят следующие события\n",
     "\n",
-    "* $A_1$ \n",
-    "\n",
-    "* ${A}_{40}$ \n",
-    "\n",
-    "* $A_1 \\cup A_{40}$ \n",
-    "\n",
-    "* $A_1 \\cap A_{40}$ \n",
-    "\n",
-    "* $\\bigcup_{i=1}^{\\infty} A_i$ \n",
-    "* $\\bigcap_{i=1}^{\\infty} A_i$ \n",
-    " \n",
-    "* $A_1 \\cap \\overline{A}_{57}$ \n",
-    " \n",
-    "* $\\bigcup_{i=40}^{\\infty} A_i$ \n",
-    "\n",
-    "* $\\bigcup_{i=1}^{\\infty} \\big(\\bigcap_{j=i}^{\\infty} A_j \\big)$ \n",
-    "\n",
-    "* $\\bigcap_{i=1}^{\\infty} \\big(\\bigcup_{j=i}^{\\infty} A_j \\big)$ \n",
+    "* $A_1$, ${A}_{40}$, $A_1 \\cup A_{40}$, $A_1 \\cap A_{40}$, $\\bigcup_{i=1}^{\\infty} A_i$, \n",
+    "$\\bigcap_{i=1}^{\\infty} A_i$, $A_1 \\cap \\overline{A}_{57}$, $\\bigcup_{i=40}^{\\infty} A_i$, $\\bigcup_{i=1}^{\\infty} \\big(\\bigcap_{j=i}^{\\infty} A_j \\big)$, $\\bigcap_{i=1}^{\\infty} \\big(\\bigcup_{j=i}^{\\infty} A_j \\big)$ \n",
     " \n"
    ]
   },
@@ -150,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.** В лесу есть три вида грибов: рыжики, лисички и мухоморы. Попадаются они равновероятно и независимо друг от друга. Маша нашла 100 грибов. Пусть $R$ — количество рыжиков, $L$ – количество лисичек, а $M$ — количество мухоморов среди этих трех грибов.\n",
+    "**3.** В лесу есть три вида грибов: рыжики, лисички и мухоморы. Попадаются они равновероятно и независимо друг от друга. Маша нашла 100 грибов. Пусть $R$ — количество рыжиков, $L$ – количество лисичек, а $M$ — количество мухоморов среди этих трех грибов.\n",
     "\n",
     "а) Сколько элементов $\\sigma(R)$?\n",
     "\n",
