--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -71,6 +71,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Мера** - положительная счетно-аддитивная функция из $\\mathcal{F}$ в $\\mathbb{R}+$\n",
+    "\n",
+    "**Вероятность** - счетно-аддитивная функция из $\\mathcal{F}$ в $[0,1]$\n",
+    "\n",
+    "Функция на множествах $\\mu$ является **счетно-аддитивной**, если для любой бесконечной последовательности непересекающихся подмножеств $A_1, A_2, \\ldots, A_n, \\ldots$ выполняется равенство\n",
+    "\n",
+    "$$\\mu(\\bigcup^{\\infty}_{i}A_i) = \\sum_{i}^{\\infty}\\mu(A_i)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Задачи на пару <a class=\"anchor\" id=\"chapter2\"></a>\n"
    ]
   },
@@ -90,7 +103,7 @@
     "* Постройте сигма-алгебру, если мы знаем, что первый раз выпала 3-ка.\n",
     "* Постройте сигма-алгебру, если мы знаем, что первый раз выпала 3-ка, а третий раз нечетное число.\n",
     "\n",
-    "Задайте какую-нибудт меру на данной сигма алгебре."
+    "Задайте какую-нибудь вероятностную меру на данной сигма алгебре."
    ]
   },
   {
@@ -171,23 +184,30 @@
     "**4.**\n",
     "Монеточка подкидывается бесконечное число раз: $X_n$ равно 132456, если при $n$-ом подбрасывании выпало ребро, и 123456, если решка. И ничего другого выпасть не может. Определим несколько $\\sigma$ - алгебр: $\\mathcal{F}_n = \\sigma(X_1,X_2,\\ldots,X_n)$, $\\mathcal{H}_n:=\\sigma(X_n,X_{n+1},X_{n+2},\\ldots)$.\n",
     "\n",
-    "**(1 балл)** Приведите по два нетривиальных (т.е. $\\Omega$ и $\\emptyset$ не называть) примера такого события $A$, что:\n",
+    "**(0.34 балл)** Приведите по два нетривиальных (т.е. $\\Omega$ и $\\emptyset$ не называть) примера такого события $A$, что:\n",
     "\n",
     "* $A\\in\\mathcal{F}_{2021}$\n",
     "* $A\\notin \\mathcal{F}_{2021}$\n",
     "* $A$ лежит в каждой $\\mathcal{H}_n$\n",
     "\n",
-    "**(0.5 балл)** В какие из упомянутых $\\sigma$ - алгебр входят события:\n",
+    "**(0.33 балл)** В какие из упомянутых $\\sigma$ - алгебр входят события:\n",
     "* $X_{45} > 0$\n",
     "* $X_{45} > X_{2021}$\n",
     "* $X_{45} > X_{2021} > X_{15}$\n",
     "\n",
     "\n",
-    "**(0.5 балл)** Упростите выражения: \n",
+    "**(0.33 балл)** Упростите выражения: \n",
     "* $\\mathcal{F}_{11} \\cap \\mathcal{F}_{25}$\n",
     "* $\\mathcal{F}_{11} \\cup \\mathcal{F}_{25}$\n",
     "* $\\mathcal{H}_{11} \\cap \\mathcal{H}_{25}$\n",
     "* $\\mathcal{H}_{11} \\cup \\mathcal{H}_{25}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5** Пусть дана убывающая последовательность $B_1 \\supseteq B_2, \\supseteq \\ldots, \\supseteq B_n \\supseteq \\ldots$ вложенных в друг друга множеств из $\\mathcal{F}$, такая что $\\mu(B_1) < \\infty$ и $B=\\bigcap^{\\infty}_{n=1}B_n$. Тогда $\\mu(B) = \\lim_{n \\to \\infty}\\mu(B_n)$"
    ]
   },
   {
