--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -221,6 +221,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**1. (1 балл)** Докажите, формулы включения-исключения исходя из определения вероятностной меры.\n",
+    "\n",
+    "Для любого конечного набора событий имеет место формула:\n",
+    "\n",
+    "$$P(A_1 \\cup \\dots \\cup A_n) = \\sum_{i=1}^{n}P(A_i) - \\sum_{i<j}P(A_iA_j) + \\ldots + (-1)^{n-1}P(A_1\\ldots A_n)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**1. (2 балла)**\n",
     "Пусть $(\\Omega,\\mathcal{F},P)$ -- вероятностное пространство, $A_1,\\ldots, A_n,\\ldots\\in\\mathcal{F}$. Для $J\\subset \\{1,\\ldots n\\}$ положим\n",
     "\t$$\\mathcal{P}_1(J)\\triangleq \\sum_{i\\in J}P(A_i), $$\n",
