change 4 and 5 practice

--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На самом деле, некоторые пункты в данном определении можно опустить, так как другие пункты так же их учитывают. Минимальные требования, при которых определение остается корректным:"
+    "На самом деле, некоторые пункты в данном определении можно опустить, так как другие пункты их учитывают. Минимальные требования, при которых определение остается корректным:"
    ]
   },
   {
@@ -155,7 +155,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. (1 балл)** Показать, что алгебра, порожденная системой $\\{A_1,\\ldots, A_n\\}$, где $A_i\\subset\\Omega$, $i = 1,\\ldots, n$ состоит из $2^{2^n}$ элементов."
+    "**1. (2 балл)** \n",
+    "* (1) Доказать, что верхний предел алгебры, порожденной системой $\\{A_1,\\ldots, A_n\\}$, где $A_i\\subset\\Omega$, $i = 1,\\ldots, n$ состоит из $2^{2^n}$ элементов. \n",
+    "* (+1) Найти пример системы множеств, когда это не так."
    ]
   },
   {
