change 6th prac

--- a/prac07/prac06.ipynb
+++ b/prac07/prac06.ipynb
@@ -94,8 +94,8 @@
     "\n",
     "![title](data/markov-1.png)\n",
     "\n",
-    "* Найдите вероятности $P(\\xi_0=1,\\xi_1=3,\\xi_2=2,\\xi_3=1)$ и $P(\\xi_0=1,\\xi_1=2,\\xi_2=3,\\xi_3=1)$.\n",
-    "* Найдите вероятности $P(\\xi_2=3|\\xi_0=1)$ и $P(\\xi_3=2|\\xi_0=1)$\n",
+    "* ([ref](https://stepik.org/lesson/254734/step/10?unit=234942))Найдите вероятности $P(\\xi_0=1,\\xi_1=3,\\xi_2=2,\\xi_3=1)$ и $P(\\xi_0=1,\\xi_1=2,\\xi_2=3,\\xi_3=1)$.\n",
+    "* ([ref](https://stepik.org/lesson/254734/step/12?unit=234942))Найдите вероятности $P(\\xi_2=3|\\xi_0=1)$ и $P(\\xi_3=2|\\xi_0=1)$\n",
     "* Выпишете матрицу переходов $T$"
    ]
   },
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.** Рассмотрим марковскую цепь(автомат) с 2 состояниями и матрицей переходов. $0 < a+b < 1$\n",
+    "**2.** Рассмотрим марковскую цепь с 2 состояниями и матрицей переходов. $0 < a, b < 1$\n",
     "\n",
     "$$T = \\begin{bmatrix}\n",
     "        1 - a & a \\\\\n",
@@ -113,7 +113,7 @@
     "Попадая в первое состояние мы пишем в строку $a$, во второе - $b$.\n",
     "Начальное распределение $\\pi = \\Big(\\frac{1}{2}, \\frac{1}{2}\\Big)$. \n",
     "Найти:\n",
-    "- $Q^{n}$\n",
+    "- $T^{n}$\n",
     "- Стационарное распределение\n",
     "- Отношение количеств букв $a$ к буквам $b$ в бесконечной строке. \n",
     "- Отношение количество пар $ab$ к парам $bb$ в бесконечной строке."
