--- a/prac03/prac03.ipynb
+++ b/prac03/prac03.ipynb
@@ -155,16 +155,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. (2 балл)** \n",
-    "* (1) Доказать, что верхний предел алгебры, порожденной системой $\\{A_1,\\ldots, A_n\\}$, где $A_i\\subset\\Omega$, $i = 1,\\ldots, n$ состоит из $2^{2^n}$ элементов. \n",
-    "* (+1) Найти пример системы множеств, когда это не так."
+    "**1. (1 балл)** Пусть $A_1, A_2, \\ldots, A_n,\\ldots$ некоторые подмножества $\\Omega$, постройте минимальную $\\sigma$-алгебру, включающую $A_1, A_2,\\ldots, A_n, \\ldots$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. (1 балл)** Пусть $A_1, A_2, \\ldots, A_n,\\ldots$ некоторые подмножества $\\Omega$, постройте минимальную $\\sigma$-алгебру, включающую $A_1, A_2,\\ldots, A_n, \\ldots$."
+    "**2. (1 балл)** \n",
+    "* Доказать, что верхний предел алгебры, порожденной системой $\\{A_1,\\ldots, A_n\\}$, где $A_i\\subset\\Omega$, $i = 1,\\ldots, n$ состоит из $2^{2^n}$ элементов. \n",
+    "* Найти пример системы множеств, когда это не так."
    ]
   },
   {
@@ -184,7 +184,7 @@
    "metadata": {},
    "source": [
     "**4.**\n",
-    "Монеточка подкидывается бесконечное число раз: $X_n$ равно 132456, если при $n$-ом подбрасывании выпало ребро, и 123456, если решка. И ничего другого выпасть не может. Определим несколько $\\sigma$ - алгебр: $\\mathcal{F}_n = \\sigma(X_1,X_2,\\ldots,X_n)$, $\\mathcal{H}_n:=\\sigma(X_n,X_{n+1},X_{n+2},\\ldots)$.\n",
+    "Монеточка подкидывается бесконечное число раз: $X_n$ равно 1, если при $n$-ом подбрасывании выпал орел, и 0, если решка. И ничего другого выпасть не может. Определим несколько $\\sigma$ - алгебр: $\\mathcal{F}_n = \\sigma(X_1,X_2,\\ldots,X_n)$, $\\mathcal{H}_n:=\\sigma(X_n,X_{n+1},X_{n+2},\\ldots)$.\n",
     "\n",
     "**(0.34 балл)** Приведите по два нетривиальных (т.е. $\\Omega$ и $\\emptyset$ не называть) примера такого события $A$, что:\n",
     "\n",
