--- a/prac06/prac.ipynb
+++ b/prac06/prac.ipynb
@@ -4,24 +4,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Дискретные случайные величины. Функция распределения.  \n",
-    "##### Матожидание. Медиана. Мода."
+    "# 6. Дискретные случайные величины.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Задачи на пару"
+    "<img src='data/6fray.jpeg' width=400/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.** В партии из 10 деталей имеется 8 стандартных. Наудачу отобраны две\n",
-    "детали. Составить закон распределения числа стандартных деталей\n",
-    "среди отобранных."
+    "## Содержание\n",
+    "\n",
+    "* [Теория](#chapter1)\n",
+    "* [Задачи на пару](#chapter2)\n",
+    "* [Домашнее задание](#chapter3)\n",
+    "* [Гробы](#chapter4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Теория <a class=\"anchor\" id=\"chapter1\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отображение $\\xi: \\Omega \\to \\mathbb{R}$ называется **Дискретной случайной величиной**, если оно принимает не более, чем счетное число значений $x_1, x_2, \\ldots x_n, \\ldots$, и выполнено утверждение $H_i = \\{\\omega \\in \\Omega | \\xi(\\omega) = x_i\\} \\in \\mathcal{F}$\n",
+    "\n",
+    "Примеры: \n",
+    "* $\\xi_1$ - игральный кубик $\\xi_1(\\omega_2) = \\frac{1}{6}$\n",
+    "* $\\xi_2$ - остаток при делении на 2, от значения на грани кубика\n",
+    "* \n",
+    "$\\xi_3 =\\left\\{\n",
+    "\t\\begin{array}{cc}\n",
+    "\t12, & \\xi_1 = 1,2,3\\\\\n",
+    "\t24, & \\xi_1 = 4,5\\\\\n",
+    "    36, & \\xi_1 = 6\\\\\n",
+    "\t\\end{array}\\right.$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Дискретным распределением** называют отображение из счетного подмножества множества $\\mathbb{R}$ в $[0,1]$ сумма элементов образа которого равна 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|$x_i$ | 12    | 24     |  36  |\n",
+    "|--------|-------|--------|------|\n",
+    "|$P(\\xi_3 = x_i)$ |  0.5  |  0.33  | 0.17 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Математическое ожидание** (наконец-то)\n",
+    "$$\\mathbb{E}[\\xi] = \\sum_{i}x_iP(\\xi=x_i)$$\n",
+    "\n",
+    "P.S. Матожидание **существует**, если оно корректно определено и конечно. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если $\\xi$ принимает только целые неотрицательные значения, то можно построить **Производящую функцию**\n",
+    "$$\\phi_{\\xi}(t) = \\sum_{i}t^kP(\\xi=x_i) = \\mathbb{E}[t^{\\xi}]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задачи на пару <a class=\"anchor\" id=\"chapter2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** В партии из 10 деталей имеется 8 стандартных. Наудачу отобраны две детали. Постройте **случайную величину**, которая описывает количество стандартных деталей среди двух отобранных. Также постройте ее распределение.\n"
    ]
   },
   {
@@ -32,45 +114,53 @@
     "\n",
     "Пусть $\\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\\mu$ - на неправильной монетке.\n",
     "\n",
-    "Найти закон распределения, функцию распределения, медиану, квантиль порядка $\\frac{1}{4}$, матожидание случайной величины:\n",
-    "* $\\theta = 2\\xi +\\mu +  3$\n",
-    "* $\\theta = \\xi\\mu$\n",
-    "* $\\theta = max(\\xi-4, \\mu)$"
+    "Найти распределения и матожидания случайных величин:\n",
+    "* $\\theta = \\xi +\\mu + 1$\n",
+    "* $\\theta = -2\\xi\\mu$\n",
+    "* $\\theta = \\frac{\\mu}{2^{\\xi}}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.**\n",
-    "Пусть случайные величины $\\xi$ и $\\eta$ независимы и распределены по закону Пуассона с параметрами $\\lambda$ и $\\mu$. Докажите, что величина $\\xi+\\eta$ тоже распределена по закону Пуассона и найдите параметр этого распределения.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4.** Монета выпадает орлом с вероятностью $p > 0$. Пусть $\\xi$ — число подбрасываний, необходимых для достижения $1$ выпадения орла. Найти производящую\n",
-    "функцию для вероятности $\\xi$, а также матожидание $\\xi$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ДЗ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**1.** У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\\frac{1}{4}$, $1$ соответственно $\\frac{3}{4}$. Пусть $\\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\\mu$ - на неправильной монетке.\n",
+    "**3.** Мы 2 раза бросили игральный кубик. Пусть $\\xi_1$ - сл.в. результата 1 броска, $\\xi_2$ - сл.в. результата 2 броска.\n",
     "\n",
-    "Найти закон распределения, функцию распределения, медиану, квантиль порядка $\\frac{1}{4}$, матожидание случайной величины:\n",
-    "* $\\theta = 2\\xi -\\mu$\n",
-    "* $\\theta = \\xi^2$\n",
-    "* $\\theta = max(\\xi+7, \\mu+1)$"
+    "В чем разница между случайными величинами $\\xi_1 \\xi_1$ и $\\xi_1 \\xi_2$? Найдите их матожидания."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4.** Монета выпадает орлом с вероятностью $p > 0$. Пусть $\\xi$ — число подбрасываний, необходимых для достижения $1$ выпадения орла. Найти производящую функцию для $\\xi$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5.** Доказать, что $\\phi_{\\xi}(1)' = \\mathbb{E}[\\xi]$ и найти матожидание в предыдущей задаче."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ДЗ <a class=\"anchor\" id=\"chapter3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.**(2) У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\\frac{1}{4}$, $1$ соответственно $\\frac{3}{4}$. Пусть $\\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\\mu$ - на неправильной монетке.\n",
+    "\n",
+    "Найти функцию распределения, матожидание случайной величины:\n",
+    "* (0.5) $\\theta = \\xi -2*\\mu$\n",
+    "* (0.5) $\\theta = max(\\xi-3, \\mu)$\n",
+    "* (0.5) $\\theta = \\xi^2 + \\mu^3$\n",
+    "* (0.5) $\\theta = \\xi^\\mu$"
    ]
   },
   {
@@ -79,7 +169,7 @@
    "source": [
     "**2.** Из двух орудий поочередно ведется стрельба по\n",
     "\tцели до первого попадания одним из орудий. Вероятность\n",
-    "\tпопадания в цель первым орудием равна 0,3, вторым - 0,7.\n",
+    "\tпопадания в цель первым орудием равна 0,2, вторым - 0,8.\n",
     "\tНачинает стрельбу первое орудие. Составить законы \n",
     "\tраспределения дискретных случайных величин $\\xi$ и $\\eta$ - числа\n",
     "\tизрасходованных снарядов соответственно первым и \n",
@@ -90,7 +180,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.** Пусть случайные величины $\\xi_1,\\ldots, \\xi_n$ независимы в совокупности и распределены по закону Пуассона с параметрами $\\lambda_1,\\ldots, \\lambda_n$ соответственно. Докажите, что величина $\\sum_{i=1}^{n}\\xi_i$ тоже распределена по закону Пуассона и найдите параметр этого распределения.\n"
+    "**3.**\n",
+    "Пусть случайные величины $\\xi$ и $\\eta$ независимы и распределены по закону Пуассона с параметрами $\\lambda$ и $\\mu$. Докажите, что величина $\\xi+\\eta$ тоже распределена по закону Пуассона и найдите параметр этого распределения. \n",
+    "\n",
+    "\n",
+    "P.S. Найдите производящую функцию для распределения Пуассона и докажите, что производящая функция нового распределения соответствует распределению Пуассона.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4** Докажите, что производящая функция для биномиального распределения (кол-во успехов в схеме Бернулли) с вероятностью $p$ и $n$ испытаниями равна \n",
+    "$$\\phi_{\\xi}(t) = ((1-p) + pe^t)^n$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Гробы <a class=\"anchor\" id=\"chapter4\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** (0.5) Пусть случайные величины $\\xi_1,\\ldots, \\xi_n$ независимы в совокупности и распределены по закону Пуассона с параметрами $\\lambda_1,\\ldots, \\lambda_n$ соответственно. Докажите, что величина $\\sum_{i=1}^{n}\\xi_i$ тоже распределена по закону Пуассона и найдите параметр этого распределения.\n"
    ]
   },
   {
