--- a/prac08/Practice6.ipynb
+++ b/prac08/Practice6.ipynb
@@ -177,6 +177,21 @@
     "**1. (1,5 балла)** В социальной сети зарегестрировано конечное число пользователей. \n",
     "Доказать, что матожидание числа друзей у пользователя меньше или равно матожиданию матожидания числа друзей у друзей пользователя. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**4.** Найдите матожидание биномиального распределения (кол-во успехов в схеме Бернулли) с вероятностью $p$ и $n$ испытаниями."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5** Докажите, что производящая функция для биномиального распределения (кол-во успехов в схеме Бернулли) с вероятностью $p$ и $n$ испытаниями равна \n",
+    "$$\\phi_{\\xi}(t) = ((1-p) + pe^t)^n$$"
+   ]
   }
  ],
  "metadata": {
