--- a/prac07/prac.ipynb
+++ b/prac07/prac.ipynb
@@ -108,6 +108,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**6.** $\\xi$ - сл.в. обозначающая число успехов в серии испытаний бернулли (имеющая биноминальное распределение). Докажите, что $\\mathbb{E}[\\xi] = np$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ДЗ <a class=\"anchor\" id=\"chapter3\"></a>"
    ]
   },
