--- a/prac06/prac.ipynb
+++ b/prac06/prac.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "source": [
     "Если $\\xi$ принимает только целые неотрицательные значения, то можно построить **Производящую функцию**\n",
-    "$$\\phi_{\\xi}(t) = \\sum_{i}t^kP(\\xi=x_i) = \\mathbb{E}[t^{\\xi}]$$"
+    "$$\\phi_{\\xi}(t) = \\sum_{k}t^kP(\\xi=k) = \\mathbb{E}[t^{\\xi}]$$"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2.** У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\\frac{2}{3}$, $1$ соответственно $\\frac{1}{3}$. \n",
+    "**2.** У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\\frac{2}{3}$, $1$ соответственно $\\frac{1}{3}$. (Очевидно, но данные сл.вел., конечно же, независимы)\n",
     "\n",
     "Пусть $\\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\\mu$ - на неправильной монетке.\n",
     "\n",
@@ -156,8 +156,10 @@
    "source": [
     "**1.**(2) У нас есть правильный кубик и неправильная монетка, на сторонах которой написаны $0$ и $1$: $0$ выпадает с вероятностью $\\frac{1}{4}$, $1$ соответственно $\\frac{3}{4}$. Пусть $\\xi$ - ДСВ, которая соответствует числу, выпавшему на грани первого кубика, а $\\mu$ - на неправильной монетке.\n",
     "\n",
+    "(Очевидно, но данные сл.вел., конечно же, независимы)\n",
+    "\n",
     "Найти функцию распределения, матожидание случайной величины:\n",
-    "* (0.5) $\\theta = \\xi -2*\\mu$\n",
+    "* (0.5) $\\theta = \\xi -2\\mu$\n",
     "* (0.5) $\\theta = max(\\xi-3, \\mu)$\n",
     "* (0.5) $\\theta = \\xi^2 + \\mu^3$\n",
     "* (0.5) $\\theta = \\xi^\\mu$"
@@ -169,7 +171,7 @@
    "source": [
     "**2.** Из двух орудий поочередно ведется стрельба по\n",
     "\tцели до первого попадания одним из орудий. Вероятность\n",
-    "\tпопадания в цель первым орудием равна 0,2, вторым - 0,8.\n",
+    "\tпопадания в цель первым орудием равна $0,2$, вторым - $0,8$.\n",
     "\tНачинает стрельбу первое орудие. Составить законы \n",
     "\tраспределения дискретных случайных величин $\\xi$ и $\\eta$ - числа\n",
     "\tизрасходованных снарядов соответственно первым и \n",
