--- a/prac08/prac.ipynb
+++ b/prac08/prac.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "Дисперсия случайной величины\n",
-    "$$\\mathbb{D}[\\xi] = \\mathbb{E}[\\xi - \\mathbb{E}[\\xi]] = \\mathbb{E}[\\xi^2] - \\mathbb{E}[\\xi]^2$$"
+    "$$\\mathbb{D}[\\xi] = \\mathbb{E}[\\xi - \\mathbb{E}[\\xi]]^2 = \\mathbb{E}[\\xi^2] - \\mathbb{E}[\\xi]^2$$"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "id": "db73f064-7d5a-455a-aac1-b56609d7419f",
    "metadata": {},
    "source": [
-    "**0.** Показать, что $\\mathbb{E}[\\xi - \\mathbb{E}[\\xi]] = \\mathbb{E}[\\xi^2] - \\mathbb{E}[\\xi]^2$"
+    "**0.** Показать, что $\\mathbb{E}[\\xi - \\mathbb{E}[\\xi]]^2 = \\mathbb{E}[\\xi^2] - \\mathbb{E}[\\xi]^2$"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "- $cov(\\xi, \\mu) = cov(\\mu, \\xi)$\n",
     "- $cov(\\alpha\\xi, \\mu) = \\alpha cov(\\xi, \\mu)$\n",
     "- $cov(\\xi_1 + \\xi_2, \\mu) = cov(\\xi_1, \\mu) + cov(\\xi_2, \\mu)$\n",
-    "- $cov(\\xi, \\mu) \\leq \\mathbb{D}[\\xi]\\mathbb{D}[\\mu]$"
+    "- $cov(\\xi, \\mu)^2 \\leq \\mathbb{D}[\\xi]\\mathbb{D}[\\mu]$"
    ]
   },
   {
