add more theory 10

--- a/prac10/prac.ipynb
+++ b/prac10/prac.ipynb
@@ -43,9 +43,30 @@
    "source": [
     "**Случайной (скалярной) величиной** $\\xi$ называется такая функция $\\xi: \\Omega \\to \\mathbb{R}$, что для любого борелевского множества $B \\in \\mathcal{B}$ выполнено \n",
     "\n",
-    "$$\\xi^{-1}(B) = \\{\\omega|\\xi(\\omega) \\in B\\} \\in \\mathcal{F}$$\n",
+    "$$\\xi^{-1}(B) = \\{\\omega|\\xi(\\omega) \\in B\\} \\in \\mathcal{F}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Напоминание:\n",
     "\n",
-    "P.S. Почти всегда в задачах мы берем $\\mathcal{B}$ как сигма алгебра всех прямоугольников на $\\mathbb{R}^{n}$ "
+    "Минимальная $\\sigma$-алгебру, содержащую все $n$-мерные параллелепипеды $\\{[a_1,b_1) \\times \\ldots \\times [a_n, b_n)\\}$- называют борелевской $\\sigma$-алгеброй над $\\mathbb{R}^{n}$ ($\\mathcal{B}$), а ее элементы - борелевскими множествами множества $\\mathbb{R}^{n}$ ($B$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Всякое борелевское множество на отрезке является измеримым относительно **меры Лебега**, но обратное неверно. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
    ]
   },
   {
@@ -53,7 +74,39 @@
    "metadata": {},
    "source": [
     "**Функция распределения случайной (скалярной) величины** $\\xi$ называют отображение $F_{\\xi}: \\mathbb{R} \\to [0,1]$, заданное по правилу \n",
-    "$$F_{\\xi}(x) = \\mathbb{P}{\\omega|\\xi(\\omega) < x}$$"
+    "$$F_{\\xi}(x) = \\mathbb{P}(\\omega|\\xi(\\omega) < x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Действительная случайная величина $\\xi$ называется **абсолютно непрерывной**, если найдется такая измеримая функция $\\rho_{\\xi}$, называемая **плотностью**, что\n",
+    "$$F_{\\xi}(b) - F_{\\xi}(a) = \\int_{a}^{b}\\rho_{\\xi}(x)dx$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Математическое ожидание абсолютно непрерывной случайной величины $\\xi$ можно считать по формуле \n",
+    "$$\\mathbb{E}[\\xi] = \\int_{-\\infty}^{\\infty}x\\rho_{\\xi}(x)dx = \\int_{-\\infty}^{\\infty}xdF_{\\xi}(x) = \\int_{\\Omega}\\xi(\\omega)P(d\\omega) = $$\n",
+    "\n",
+    "Дисперсия вводится аналогично дискретным величинам $$\\mathbb{D}[\\xi] = \\mathbb{E}[\\xi^2] - \\mathbb{E}[\\xi]^2$$"
    ]
   },
   {
