add more Lebeg 10

--- a/prac11/Practice9.ipynb
+++ b/prac11/Practice9.ipynb
@@ -25,6 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Математическое ожидание абсолютно непрерывной случайной величины $\\xi$ можно считать по формуле \n",
+    "$$\\mathbb{E}[\\xi] = \\int_{-\\infty}^{\\infty}x\\rho_{\\xi}(x)dx = \\int_{-\\infty}^{\\infty}xdF_{\\xi}(x) = \\int_{\\Omega}\\xi(\\omega)P(d\\omega)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Теория"
    ]
   },
