--- a/prac10/prac.ipynb
+++ b/prac10/prac.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='data/lebegdarbu.png' width=400/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "bc21279e-5c02-444f-af18-c24c253d2ac0"
    },
@@ -119,7 +126,7 @@
    "source": [
     "**1.** Нарисовать для Параболы суммы Дарбу для Римана и для Лебега\n",
     "\n",
-    "**2.** Пример функции, которая неинтегрируема по Риману, но интегрируется по Лебега\n",
+    "**2.** Пример функции, которая неинтегрируема по Риману, но интегрируется по Лебегу\n",
     "\n",
     "**3.**\n",
     "Случайная величина $\\xi$ имеет функцию распределения $F_{\\xi}$, определенную равенством\n",
