add lebeg pic v2

--- a/prac10/prac.ipynb
+++ b/prac10/prac.ipynb
@@ -11,7 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='data/lebegdarbu.png' width=400/>"
+    "<img src='data/lebeg.png' width=400/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='data/r1.png' width=400/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='data/r2.png' width=400/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='data/r3.png' width=400/>"
    ]
   },
   {
