--- a/prac10/prac.ipynb
+++ b/prac10/prac.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='data/lebeg.png' width=400/>"
+    "<img src='data/r3.png' width=400/>"
    ]
   },
   {
@@ -25,14 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='data/r2.png' width=400/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src='data/r3.png' width=400/>"
+    "<img src='data/lebeg.png' width=400/>"
    ]
   },
   {
@@ -74,18 +67,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Случайной (скалярной) величиной** $\\xi$ называется такая функция $\\xi: \\Omega \\to \\mathbb{R}$, что для любого борелевского множества $B \\in \\mathcal{B}$ выполнено \n",
+    "**Напоминание**\n",
     "\n",
-    "$$\\xi^{-1}(B) = \\{\\omega|\\xi(\\omega) \\in B\\} \\in \\mathcal{F}$$"
+    "Минимальную $\\sigma$-алгебру, содержащую все $n$-мерные параллелепипеды $\\{[a_1,b_1) \\times \\ldots \\times [a_n, b_n)\\}$- называют борелевской $\\sigma$-алгеброй над $\\mathbb{R}^{n}$ ($\\mathcal{B}$), а ее элементы - борелевскими множествами множества $\\mathbb{R}^{n}$ ($B$)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Напоминание:\n",
+    "Борелевской мерой каждого параллелепипеда назовем\n",
+    "$$\\lambda \\Big([a_1,b_1) \\times \\ldots \\times [a_n, b_n)\\Big) = (b_1 - a_1) \\times \\ldots \\times (b_n -a_n)$$\n",
     "\n",
-    "Минимальная $\\sigma$-алгебру, содержащую все $n$-мерные параллелепипеды $\\{[a_1,b_1) \\times \\ldots \\times [a_n, b_n)\\}$- называют борелевской $\\sigma$-алгеброй над $\\mathbb{R}^{n}$ ($\\mathcal{B}$), а ее элементы - борелевскими множествами множества $\\mathbb{R}^{n}$ ($B$)."
+    "По т. Каратеодори, эту меру можно продолжить на все элементы $\\mathcal{B}$. Такая мера и называется **мерой Лебега**"
    ]
   },
   {
@@ -93,6 +87,40 @@
    "metadata": {},
    "source": [
     "Всякое борелевское множество на отрезке является измеримым относительно **меры Лебега**, но обратное неверно. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Интеграл Лебега** (наброски)\n",
+    "\n",
+    "Основная идея в том, что мы строим интегральные суммы вертикально от образа, а не от прообраза. \n",
+    "\n",
+    "$$\\int_{\\mathcal{B}}f(x)dx = \\sum_{i}y_i^{*}\\mu(A_i)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='data/r2.png' width=400/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Случайной (скалярной) величиной** $\\xi$ называется такая функция $\\xi: \\Omega \\to \\mathbb{R}$, что для любого борелевского множества $B \\in \\mathcal{B}$ выполнено \n",
+    "\n",
+    "$$\\xi^{-1}(B) = \\{\\omega|\\xi(\\omega) \\in B\\} \\in \\mathcal{F}$$"
    ]
   },
   {
@@ -145,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1.** Нарисовать для Параболы суммы Дарбу для Римана и для Лебега\n",
+    "**1.** Нарисовать для Параболы интегральные суммы для интеграла Римана и для интеграла Лебега\n",
     "\n",
     "**2.** Пример функции, которая неинтегрируема по Риману, но интегрируется по Лебегу\n",
     "\n",
@@ -162,7 +190,7 @@
     "**4.** Случайная величина $\\xi$ имеет непрерывную функцию распределения $F_{\\xi}(x)$. \n",
     "Найдите функцию распределения случайной величины $\\eta=3-2\\xi$.\n",
     "\n",
-    "**5.** Докажите формулу свертки.\n",
+    "**5.** [Докажите формулу свертки](https://tvims.nsu.ru/chernova/tv/lec/node39.html)\n",
     "\n",
     "$$\\rho_{\\xi_1 + \\xi_2}(x) = \\int_{-\\infty}^{\\infty}f_{\\xi_1}(u)f_{\\xi_2}(x - u)du$$\n",
     "\n",
@@ -182,16 +210,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**0.** Нарисовать суммы дарбу и объяснить сходимость гиперболы для Римана и Лебега\n",
-    "\n",
-    "**1.**\n",
-    "В квадрате $[0,1]^2$ наугад выбирается точка $\\omega=(\\omega_1,\\omega_2)$. Случайная величина $\\xi$ задается равенством $\\xi(\\omega)=\\omega_1+\\omega_2$. Найдите функцию распределения $F_{\\xi}(x)$.\n",
+    "**1.** Нарисовать интегральные суммы и объяснить сходимость гиперболы для Римана и Лебега\n",
     "\n",
     "**2.**\n",
+    "В квадрате $[0,1]^2$ наугад выбирается точка $\\omega=(\\omega_1,\\omega_2)$. Случайная величина $\\xi$ задается равенством $\\xi(\\omega)=\\omega_1+\\omega_2$. Найдите функцию распределения $F_{\\xi}(x)$.\n",
+    "\n",
+    "**3.**\n",
     "Случайная величина $\\xi$ имеет непрерывную функцию распределения $F_{\\xi}(x)$. \n",
     "Найдите функцию распределения случайной величины $\\eta=1-3\\xi^2$.\n",
     "\n",
-    "**3.** Плотность распределения случайной величины $\\xi$ задана формулой\n",
+    "**4.** Плотность распределения случайной величины $\\xi$ задана формулой\n",
     "\t$$f_\\xi(x) =\\left\\{\n",
     "\t\\begin{array}{cc}\n",
     "\tCx^{-3/2}, & x\\geq 1 \\\\\n",
@@ -203,14 +231,11 @@
     "* $P\\{0,1<\\eta<0,2\\}$.\n",
     "\n",
     "\n",
-    "**4.** \n",
+    "**5.** \n",
     "Функция распределения случайной величины $\\xi$ имеет вид $F_{\\xi}(x)=a + b*arctg(x)$. \n",
     "Найдите:\n",
     "* параметры $a$ и $b$\n",
     "* плотность вероятности.\n",
-    "\n",
-    "**5.** Случайная величина $\\xi$ имеет распределение Коши с плотностью $\\rho_{\\xi}(x)=\\frac{1}{\\pi(1+x^2)}$. \n",
-    "Найдите плотность и функцию распределения случайной величины $\\eta = \\frac{1}{1+\\xi^2}$. \n",
     "\n"
    ]
   },
